--- a/workspace/shadcn-ui/index.html
+++ b/workspace/shadcn-ui/index.html
@@ -7,13 +7,13 @@
   <!-- Inline SVG favicon to avoid missing icon fallbacks in some browsers -->
   <link
     rel="icon"
-    href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" fill="none"><defs><linearGradient id="hatch-grad" x1="14" y1="6" x2="52" y2="58" gradientUnits="userSpaceOnUse"><stop stop-color="%232563EB"/><stop offset="1" stop-color="%2322D3EE"/></linearGradient></defs><rect x="4" y="4" width="56" height="56" rx="14" fill="url(%23hatch-grad)"/><path d="M22 19h8.5c5.4 0 9.5 3.5 9.5 9 0 5.7-4.2 9.2-9.7 9.2H26v7.8h-4V19Zm4 4v10.3h4.2c3.4 0 5.5-1.9 5.5-5.2 0-3.3-2.1-5.1-5.5-5.1H26Z" fill="white"/></svg>'
+    href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" fill="none"><defs><linearGradient id="hatch-grad" x1="8" y1="8" x2="56" y2="56" gradientUnits="userSpaceOnUse"><stop stop-color="%232CD4C6"/><stop offset="1" stop-color="%232563EB"/></linearGradient></defs><rect x="4" y="4" width="56" height="56" rx="16" fill="url(%23hatch-grad)"/><path fill="white" d="M20 16h6v14h12V16h6v32h-6V34H26v14h-6V16Z"/></svg>'
     type="image/svg+xml"
     sizes="any"
   >
   <link
     rel="shortcut icon"
-    href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" fill="none"><defs><linearGradient id="hatch-grad" x1="14" y1="6" x2="52" y2="58" gradientUnits="userSpaceOnUse"><stop stop-color="%232563EB"/><stop offset="1" stop-color="%2322D3EE"/></linearGradient></defs><rect x="4" y="4" width="56" height="56" rx="14" fill="url(%23hatch-grad)"/><path d="M22 19h8.5c5.4 0 9.5 3.5 9.5 9 0 5.7-4.2 9.2-9.7 9.2H26v7.8h-4V19Zm4 4v10.3h4.2c3.4 0 5.5-1.9 5.5-5.2 0-3.3-2.1-5.1-5.5-5.1H26Z" fill="white"/></svg>'
+    href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" fill="none"><defs><linearGradient id="hatch-grad" x1="8" y1="8" x2="56" y2="56" gradientUnits="userSpaceOnUse"><stop stop-color="%232CD4C6"/><stop offset="1" stop-color="%232563EB"/></linearGradient></defs><rect x="4" y="4" width="56" height="56" rx="16" fill="url(%23hatch-grad)"/><path fill="white" d="M20 16h6v14h12V16h6v32h-6V34H26v14h-6V16Z"/></svg>'
     type="image/svg+xml"
   >
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
