--- a/workspace/shadcn-ui/index.html
+++ b/workspace/shadcn-ui/index.html
@@ -4,20 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- Inline SVG favicon to avoid missing icon fallbacks in some browsers -->
-  <link
-    rel="icon"
-    href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" fill="none"><defs><linearGradient id="hatch-grad" x1="8" y1="8" x2="56" y2="56" gradientUnits="userSpaceOnUse"><stop stop-color="%232CD4C6"/><stop offset="1" stop-color="%232563EB"/></linearGradient></defs><rect x="4" y="4" width="56" height="56" rx="16" fill="url(%23hatch-grad)"/><path fill="white" d="M20 16h6v14h12V16h6v32h-6V34H26v14h-6V16Z"/></svg>'
-    type="image/svg+xml"
-    sizes="any"
-  >
-  <link
-    rel="shortcut icon"
-    href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" fill="none"><defs><linearGradient id="hatch-grad" x1="8" y1="8" x2="56" y2="56" gradientUnits="userSpaceOnUse"><stop stop-color="%232CD4C6"/><stop offset="1" stop-color="%232563EB"/></linearGradient></defs><rect x="4" y="4" width="56" height="56" rx="16" fill="url(%23hatch-grad)"/><path fill="white" d="M20 16h6v14h12V16h6v32h-6V34H26v14h-6V16Z"/></svg>'
-    type="image/svg+xml"
-  >
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="mask-icon" href="/favicon.svg" color="#2563EB">
+  <link rel="icon" href="/favicon.png" type="image/png">
+  <link rel="shortcut icon" href="/favicon.png" type="image/png">
   <title>Hatch - Find Your Next Hatch</title>
   <meta name="description" content="Hatch - Find Your Next Hatch. Discover your perfect property with powerful search tools and connect with top brokers." />
   <meta name="author" content="Hatch" />
